fix: Add missing information to the restaurant search list